--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.application.name=eCommerce-site*
 spring.datasource.username = root
 spring.datasource.password = root
 spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# you can also tell Hibernate the dialect by   org.hibernate.dialect.  whatever it is
 
 
 #tell hibernate to create the table
