3 JPAs for recording data created and set up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 #tell hibernate to create the table
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+
+
+#change here from update to validate
